[gd_scene load_steps=5 format=3 uid="uid://bmt3f0gx76jkh"]

[ext_resource type="Script" uid="uid://dtek2sckpvmph" path="res://src/interface/title_screen.gd" id="1_igqt4"]
[ext_resource type="PackedScene" uid="uid://7sb7psgeb6eh" path="res://src/interface/submenu/submenu.tscn" id="2_6hjt2"]

[sub_resource type="Gradient" id="Gradient_6hjt2"]
colors = PackedColorArray(0.262911, 0.0954075, 0.0705638, 1, 0.469297, 0.279406, 1.44392e-07, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1yyjn"]
gradient = SubResource("Gradient_6hjt2")

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_igqt4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_1yyjn")
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.0
offset_top = 25.0
offset_right = 103.0
offset_bottom = 65.0
grow_horizontal = 2

[node name="LogoPlaceholder" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "LOGO GOES HERE WOW"

[node name="Buttons" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -28.0
offset_right = 62.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="StartButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Date Start!"

[node name="TutorialButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "How to Play"

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Credits"

[node name="Submenu" parent="." instance=ExtResource("2_6hjt2")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="closed" from="Submenu" to="." method="_on_submenu_closed"]
